--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,3 +89,28 @@ html,body
     position:relative;
     border:1px solid gray;
 }
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+::-webkit-scrollbar-button {
+    background-color: #ddd;
+}
+::-webkit-scrollbar-track {
+    background-color: #efefef;
+}
+::-webkit-scrollbar-track-piece {
+    background-color: #eee;
+}
+::-webkit-scrollbar-thumb {
+    height: 50px;
+    background-color: #ccc;
+    border-radius: 3px;
+}
+::-webkit-scrollbar-corner {
+    background-color: #fff;
+}
+::-webkit-resizer {
+    background-color: #999;
+}
